<resources>
    <string name="app_name">LocationReader</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="store_location">Store Location</string>
    <string name="location_name">Location Name</string>
    <string name="stored_location">Stored locations</string>
    <string name="connection_error">Could not connect to Google</string>
    <string name="location_added_success">Location stored successfully</string>
    <string name="location_added_unsuccess">Location has already been added</string>
    <string name="name_required">Location name is required</string>
    <string name="lat_format">Lat : %1$s</string>
    <string name="long_format">Long : %1$s</string>
</resources>
