<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.thetechnocafe.locationreader.MainLocationReader.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="24dp"
            android:src="@drawable/ic_location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/latitude"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/latitude_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="- -"
                    android:textSize="32sp"/>

            </LinearLayout>

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/longitude"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/longitude_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="- -"
                    android:textSize="32sp"/>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/location_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            android:theme="@style/EditTextStyle"
            app:errorTextAppearance="@style/TextInputLayoutErrorText">

            <EditText
                android:id="@+id/location_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/location_name"
                android:inputType="textShortMessage|textCapWords"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/store_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_store_location"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:text="@string/store_location"
            android:textColor="@android:color/white"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/saved_locations_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:behavior_peekHeight="56dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:text="@string/stored_location"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/bottom_sheet_up_image_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_up_button"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stored_locations_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
